--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# user www-data;
+user root;
 # Make it run in the foreground so it can be managed by circus.
 # Still retains the master/worker structure
 daemon off;
